feat(kernel): manage workspace memberships
